--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@
 
     --container-width-lg: 75%;
     --container-width-md: 86%;
-    --container-width-ms: 90%;
+    --container-width-sm: 90%;
 }
 html {
     scroll-behavior:smooth;
@@ -51,7 +51,6 @@ h1 {
 
 section {
     margin-top: 8rem;
-    height: 100vh;
 }
 section > h2, section > h5 {
     text-align: center;
