--- a/src/components/Portfolio/portfolio.css
+++ b/src/components/Portfolio/portfolio.css
@@ -30,6 +30,9 @@
 .portfolio__item h3 {
    margin: 1.2rem 0 2rem; 
 }
+.portfolio__item p {
+   margin: 1rem 
+}
 .portfolio__item-cta {
     display: flex;
     gap: 1rem;
